@@ -1,3 +1,7 @@
+2007-03-22 Jens Tkotz <jens@peino.de> 1.5.6-svn-b23
+
+ * Fix: Search throwed a warning for albums without highlight.
+
 2007-03-22 Jens Tkotz <jens@peino.de> 1.5.6-svn-b22
 
  * Fix: Htmlfix in b21 broke image area links.
